[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/bg.png" type="Texture" id=1]
[ext_resource path="res://assets/card_back.png" type="Texture" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://Score.tres" type="Theme" id=4]
[ext_resource path="res://fonts/TIMES.TTF" type="DynamicFontData" id=5]
[ext_resource path="res://times.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/won_msg.png" type="Texture" id=7]

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("VictoryMessage:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -192, 180 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MessageBackground:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "show_victory_message"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("VictoryMessage:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 1.3, 1.8, 2.6, 3 ),
"transitions": PoolRealArray( 0.143587, 0.189465, 1, 4.28709, 1, 1 ),
"update": 0,
"values": [ Vector2( -192, 180 ), Vector2( -192, 180 ), Vector2( 320, 180 ), Vector2( 320, 180 ), Vector2( 824, 180 ), Vector2( 824, 180 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MessageBackground:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 2.5, 2.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.6 ), Color( 0, 0, 0, 0.6 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 42.5, 64 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 0.0901961, 0.0901961, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.584314, 0, 0, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.556863, 0, 0, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="Theme" id=5]
default_font = ExtResource( 6 )
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_focus = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = SubResource( 2 )
Button/styles/hover = SubResource( 7 )
Button/styles/normal = SubResource( 6 )
Button/styles/pressed = SubResource( 6 )

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 8 )
anims/show_victory_message = SubResource( 9 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 320, 180 )
texture = ExtResource( 1 )

[node name="PlayerCards" type="Node" parent="."]

[node name="OpponentCards" type="Node" parent="."]

[node name="CardDeck" type="Area2D" parent="."]

[node name="CardDeckSprite" type="Sprite" parent="CardDeck"]
position = Vector2( 55, 186 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardDeck"]
position = Vector2( 54.5, 186 )
shape = SubResource( 1 )

[node name="GiveEnemyCardTimer" type="Timer" parent="."]
one_shot = true

[node name="TimeoutBeforeStart" type="Timer" parent="."]
one_shot = true

[node name="PlayerPointsLabel" type="Label" parent="."]
margin_left = 12.0
margin_top = 256.0
margin_right = 52.0
margin_bottom = 295.0
rect_scale = Vector2( 2.12261, 1.90199 )
theme = ExtResource( 4 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "0"
align = 1

[node name="EnemyPointsLabel" type="Label" parent="."]
margin_left = 6.0
margin_top = 27.0
margin_right = 46.0
margin_bottom = 66.0
rect_scale = Vector2( 2.12261, 1.90199 )
theme = ExtResource( 4 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "0"
align = 1

[node name="CardsSpawnPosition" type="Position2D" parent="."]
position = Vector2( 12, 122 )

[node name="ReadyButton" type="Button" parent="."]
margin_left = 12.0
margin_top = 336.0
margin_right = 97.0
margin_bottom = 357.0
theme = SubResource( 5 )
text = "Ready"

[node name="CardsLayer" type="Node2D" parent="."]

[node name="MessageBackground" type="ColorRect" parent="."]
visible = false
light_mask = 0
margin_top = 118.0
margin_right = 640.0
margin_bottom = 246.0
color = Color( 0, 0, 0, 0 )

[node name="VictoryMessage" type="Sprite" parent="."]
visible = false
position = Vector2( -192, 180 )
texture = ExtResource( 7 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="input_event" from="CardDeck" to="." method="_on_CardDeck_input_event"]
[connection signal="timeout" from="TimeoutBeforeStart" to="." method="_on_TimeoutBeforeStart_timeout"]
[connection signal="pressed" from="ReadyButton" to="." method="_on_ReadyButton_pressed"]
